# toolbox

./: .gitignore  README.md  biliup.md  index.html  package-lock.json  package.json  test-sidecar.mjs  vite.config.ts
designs/: novel-manager-redesigned.html  tag-value-input.html
src/: App.tsx  main.tsx  safe-tauri.ts  styles.css  tauri-event.ts  tauri-invoke.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/command/: card_display.rs  categories.rs  cleanup.rs  data_io.rs  duplicate.rs  encoder.rs  libraries.rs  logs.rs  mod.rs  open_file.rs  open_url.rs  presets.rs  scanner.rs  settings.rs  system.rs  tags.rs  thumbnail.rs  videos.rs  window.rs
src-tauri/src/config/: mod.rs
src-tauri/src/domain/: card_display.rs  category.rs  library.rs  mod.rs  preset.rs  scan.rs  settings.rs  tag.rs  task.rs  video.rs
src-tauri/src/error/: mod.rs
src-tauri/src/infra/: mod.rs
src-tauri/src/infra/db/: mod.rs
src-tauri/src/infra/event/: mod.rs
src-tauri/src/infra/ffmpeg/: mod.rs
src-tauri/src/infra/logger/: mod.rs
src-tauri/src/infra/resource/: mod.rs
src-tauri/src/repository/: categories.rs  libraries.rs  mod.rs  presets.rs  settings.rs  tags.rs  videos.rs
src-tauri/src/service/: mod.rs  rule_engine.rs  sidecar.rs  text_scanner.rs  thumbnail.rs
src-tauri/src/service/catalog/: mod.rs
src-tauri/src/service/cover/: mod.rs
src-tauri/src/service/scanner/: mod.rs
src/components/: ConfirmDialog.tsx  ContextMenu.tsx  Layout.tsx  Notification.tsx  ParticleBackground.tsx  SaveStatusBar.tsx  TextureBg.tsx  UnifiedLogViewer.tsx
src/config/: modules.ts
分析/: cookies.json
(+39 files in other folders)
