[package]
name = "toolbox"
version = "2.0.0"
edition = "2018"

[lib]
name = "toolbox_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1.8", features = ["dialog-all", "fs-all", "path-all", "window-close", "window-maximize", "window-minimize", "window-start-dragging", "window-unmaximize", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
walkdir = "2"
thiserror = "2"
once_cell = "1"
async-channel = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "process"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
sysinfo = "0.39"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
base64 = "0.22"
lru = "0.12"
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"
reqwest = { version = "0.12", features = ["json"] }
fastrand = "2"
http = "1"
sha2 = "0.10"
hex = "0.4"
httpdate = "1.0"
dirs = "6.0"


tokio-util = { version = "0.7", features = ["rt"] }
rand = "0.8"
regex = "1"
futures = "0.3"
bytes = "1"
xml-rs = "0.8"
urlencoding = "2"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
[target.'cfg(unix)'.dependencies]
libc = "0.2"
